--- a/css/reset.css
+++ b/css/reset.css
@@ -54,8 +54,7 @@ samp {
 	font-family: monospace, monospace; 
 	font-size: 1em; 
 
-
-small {;
+small {
 	font-size: 80%;
 }
 sub,
@@ -149,15 +148,15 @@ textarea {
 	height: auto;
 }
 [type='search'] {
-	-webkit-appearance: textfield; /* 1 */
-	outline-offset: -2px; /* 2 */
+	-webkit-appearance: textfield; 
+	outline-offset: -2px; 
 }
 [type='search']::-webkit-search-decoration {
 	-webkit-appearance: none;
 }
 ::-webkit-file-upload-button {
-	-webkit-appearance: button; /* 1 */
-	font: inherit; /* 2 */
+	-webkit-appearance: button; 
+	font: inherit; 
 }
 details {
 	display: block;
